# bathtub

./: .gitignore  .~lock.Untitled 1.odt#  .~lock.nodes.ods#  Cargo.toml  README.md  Untitled 1.odt  build.rs  icon.xcf  main.rs  nodes.ods
config/: actions.toml  baths.toml
recipes/: test.toml
src/: GRBL.rs  actions.rs  advanced.rs  build.rs  grbl.rs  interact.rs  logger.rs  main.rs  manual.rs  manual_ui.rs  nodes.rs  paths.rs  run.rs  style.rs
