[package]
name = "bathtub"
version = "0.1.0"
authors = ["13r0ck <bnr@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4"
toml = "0.5.8"
serde = { version = "1.0.120", features = ["derive"] }
iced = { path = "../iced" , features = ["tokio"] }
chrono = "0.4.19"
regex = "1.4.3"
csv = "1.1.5"
futures = "0.1"
itertools = "0.10.0"
users = "0.11"
